# yemenhybridapp

./: .replit  RUN.md  pyproject.toml  replit.md
attached_assets/: Pasted-Implement-SQLAlchemy-models-and-Alembic-migration-for-the-following-tables-async-engine-users--1758321013359_1758321013360.txt  Pasted-You-are-Replit-AI-Fix-Flutter-web-bootstrap-errors-in-the-repo-Perform-these-steps-1-Overwrit-1758577965007_1758577965009.txt  Pasted-You-are-Replit-AI-acting-on-the-repo-yemenhybridapp-Goals-Fix-Flutter-Web-bootstrap-stop-th-1758410494864_1758410494865.txt  Pasted-You-are-a-senior-Flutter-Web-engineer-Fix-the-startup-error-FlutterLoader-load-requires-flutter-1758404559291_1758404559291.txt
backend/: .env  .env.sample  alembic.ini  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 119cdc1d4872_add_all_database_tables.py  27d9c546fab2_fix_enum_values_final.py  5cc36f30984a_add_approval_requests_table.py  a9ef65f8c484_initial_migration.py  c1cbd0cce396_add_customer_indexes_for_name_phone_.py  cfa521bd4f28_add_approval_tracking_fields.py  d29176ae6cfd_fix_enum_values_to_lowercase.py  ef1b32bad0ad_fix_approval_channel_enum_values.py  (+1 more)
backend/app/: main.py
backend/templates/: approval.html
backend/tests/: conftest.py  test_approval_workflow.py  test_auth.py  test_customers.py  test_invoice_generation.py  test_parts.py  test_services.py  test_vehicles.py  test_workorders.py
flutter_app/: analysis_options.yaml  l10n.yaml  pubspec.yaml
flutter_app/lib/: app.dart  main.dart  main_complex.dart
flutter_app/web/: index.html  manifest.json
(+117 files in other folders)
